--- a/app-emulation/vmware-workstation/files/vmware-14.0.rc
+++ b/app-emulation/vmware-workstation/files/vmware-14.0.rc
@@ -10,17 +10,42 @@ depend() {
 start() {
 	ebegin Starting VMware USB Arbitrator
 	#start-stop-daemon --start --exec @@BINDIR@@/vmware-usbarbitrator
-	@@BINDIR@@/vmware-usbarbitrator 
+	@@BINDIR@@/vmware-usbarbitrator
 	eend $?
 	ebegin Starting VMware services
-	
-	# quiet for vmci because it may not be there
-	modprobe -vq vmci || modprobe -v vmw_vmci
-	eend $?
-	
-	# vmci or vmw_vmci was loaded by the previous modprobe 
+
+	# vmci might be:
+	# 1) built as external kernel module
+	# 2) built as internal kernel module (with name vmw_vmci)
+	# 3) embedded in the kernel
+	for mod in /lib/modules/$(uname -r)/misc/vmci.ko \
+		/lib/modules/$(uname -r)/kernel/drivers/misc/vmw_vmci/vmw_vmci.ko ;
+	do
+		if [[ -f "${mod}" ]] ; then
+			modprobe -v $(basename "${mod}" .ko)
+			eend $?
+			break
+		fi
+	done
+
+	# vsock might be:
+	# 1) built as external kernel module
+	# 2) built as internal kernel module (with name vmw_vsock_vmci_transport)
+	# 3) embedded in the kernel
+	for mod in /lib/modules/$(uname -r)/misc/vsock.ko \
+		/lib/modules/$(uname -r)/kernel/net/vmw_vsock/vmw_vsock_vmci_transport.ko ;
+	do
+		if [[ -f "${mod}" ]] ; then
+			modprobe -v $(basename "${mod}" .ko)
+			eend $?
+			break
+		fi
+	done
+
+	# vmci or vsock were already loaded by the previous modprobe,
 	# no need to do it here
-	modprobe -av vmmon vsock vmblock vmnet 
+	# quiet for vmci because it may not be there
+	modprobe -av vmmon vmblock vmnet
 	eend $?
 	@@BINDIR@@/vmware-networks --start
 	eend $?
@@ -29,15 +54,39 @@ start() {
 stop() {
 	ebegin Stopping VMware USB Arbitrator
 	#start-stop-daemon --stop --exec @@BINDIR@@/vmware-usbarbitrator
-	killall --wait vmware-usbarbitrator 
+	killall --wait vmware-usbarbitrator
 	eend $?
-	@@BINDIR@@/vmware-networks --stop 
+	@@BINDIR@@/vmware-networks --stop
 	eend $?
 	ebegin Stopping VMware services
-	modprobe -rv vsock vmmon vmblock vmnet
+	modprobe -rv vmmon vmblock vmnet
 	eend $?
-	
-	# quiet for vmci because it may not be there
-	modprobe -rvq vmci || modprobe -rv vmw_vmci
-	eend $?
+
+	# vsock might be:
+	# 1) built as external kernel module
+	# 2) built as internal kernel module (with name vmw_vsock_vmci_transport)
+	# 3) embedded in the kernel
+	for mod in /lib/modules/$(uname -r)/misc/vsock.ko \
+		/lib/modules/$(uname -r)/kernel/net/vmw_vsock/vmw_vsock_vmci_transport.ko ;
+	do
+		if [[ -f "${mod}" ]] ; then
+			modprobe -rv $(basename "${mod}" .ko)
+			eend $?
+			break
+		fi
+	done
+
+	# vmci might be:
+	# 1) built as external kernel module
+	# 2) built as internal kernel module (with name vmw_vmci)
+	# 3) embedded in the kernel
+	for mod in /lib/modules/$(uname -r)/misc/vmci.ko \
+		/lib/modules/$(uname -r)/kernel/drivers/misc/vmw_vmci/vmw_vmci.ko ;
+	do
+		if [[ -f "${mod}" ]] ; then
+			modprobe -rv $(basename "${mod}" .ko)
+			eend $?
+			break
+		fi
+	done
 }
