net-p2p/nimbus-eth2-9999-r7

--- a/net-p2p/nimbus-eth2/files/nimbus-eth2.conf
+++ b/net-p2p/nimbus-eth2/files/nimbus-eth2.conf
@@ -1,10 +1,9 @@
-#binary="nimbus_beacon_node_medalla"
 binary="nimbus_beacon_node"
 
-# Medalla example:
-#command_args="--network=medalla \
+# Pyrmont example:
+#command_args="--network=pyrmont \
 #--log-level=INFO \
-#--data-dir=/home/user/shared_medalla_0 \
+#--data-dir=/home/user/shared_pyrmont_0 \
 #--web3-url=ws://localhost:8545 \
 #--nat=extip:YOUR_PUBLIC_IP \
 #--tcp-port=9000 \
