net-p2p/nimbus-eth2-1.5.5

--- a/net-p2p/nimbus-eth2/files/nimbus-eth2.conf
+++ b/net-p2p/nimbus-eth2/files/nimbus-eth2.conf
@@ -2,6 +2,7 @@ binary="nimbus_beacon_node"
 
 # Pyrmont example:
 #command_args="--network=pyrmont \
+#--non-interactive \
 #--log-level=INFO \
 #--data-dir=/home/user/shared_pyrmont_0 \
 #--web3-url=ws://localhost:8545 \
@@ -14,7 +15,7 @@ binary="nimbus_beacon_node"
 #--rpc-port=9190"
 command_args=""
 
-# fill these in:
+# Fill these in:
 user=""
 group=""
 
