--- a/net-p2p/freenet/files/freenet-0.7.5_p1503-wrapper.conf
+++ b/net-p2p/freenet/files/freenet-0.7.5_p1503-wrapper.conf
@@ -13,10 +13,16 @@ wrapper.java.initmemory=60
 wrapper.java.maxmemory=1024
 wrapper.java.additional.1=-Dnetworkaddress.cache.ttl=0
 wrapper.java.additional.2=-Dnetworkaddress.cache.negative.ttl=0
-wrapper.java.additional.3=-enableassertions:freenet
+wrapper.java.additional.3=-Djava.net.preferIPv4Stack=false
+wrapper.java.additional.4=-Djava.io.tmpdir=./tmp/
+wrapper.java.additional.5=--illegal-access=permit
+wrapper.java.additional.6=--add-opens=java.base/java.lang=ALL-UNNAMED
+wrapper.java.additional.7=--add-opens=java.base/java.util=ALL-UNNAMED
+wrapper.java.additional.8=--add-opens=java.base/java.io=ALL-UNNAMED
+wrapper.java.additional.9=-Xss512k
 # Required since JNA 5.0.0, which changed the default JNI library search path
 # https://github.com/java-native-access/jna/issues/384
-wrapper.java.additional.5=-Djna.nosys=false
+wrapper.java.additional.10=-Djna.nosys=false
 
 wrapper.app.parameter.1=freenet.ini
 wrapper.console.format=PM
