www-apps/jackett-bin-0.24.185-r1.ebuild
add service args

--- a/www-apps/jackett-bin/files/jackett.service
+++ b/www-apps/jackett-bin/files/jackett.service
@@ -7,7 +7,7 @@ User=jackett
 Group=jackett
 
 Type=simple
-ExecStart=/opt/jackett/jackett
+ExecStart=/opt/jackett/jackett --ListenPrivate --NoUpdates
 TimeoutStopSec=20
 KillMode=process
 Restart=always
